# 3d-movie-theater

./: CMakeLists.txt
assets/models/: OverlayRectangle.cpp  OverlayRectangle.h
assets/shaders/: hud_quad.vs  overlay.frag  seat.frag  seat.vert
include/: Application.h  Camera.h  HUD.h  Renderer.h  Shader.h
src/: Application.cpp  Camera.cpp  HUD.cpp  Renderer.cpp  Shader.cpp  main.cpp
src/figures3D/: Room3D.cpp  Room3D.h  Screen.cpp  Screen.h  Seat3D.cpp  Seat3D.h  SeatsGrid.cpp
src/model/: Person.h  Seat.h
src/service/: PersonManager.cpp  PersonManager.h  SeatService.cpp  SeatService.h
